--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
   "scripts": {
     "lint": "eslint --fix packages/**/*.js packages/**/bin/*",
     "changelog": "node scripts/genChangelog.js run",
-  },
-  "gitHooks": {
     "pre-commit": "lint-staged",
     "commit-msg": "node scripts/verifyCommitMsg.js"
   },
@@ -27,6 +25,7 @@
     "chalk": "^2.4.1",
     "conventional-changelog": "^2.0.1",
     "execa": "^0.10.0",
+    "husky": "^0.14.3",
     "lerna": "^2.11.0",
     "lint-staged": "^7.2.0"
   }
