--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "lint": "eslint --fix packages/**/*.js packages/**/bin/*",
     "changelog": "node scripts/genChangelog.js run",
+    "push": "git commit -a -m",
     "precommit": "lint-staged",
     "commitmsg": "node scripts/verifyCommitMsg.js"
   },
