--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
   "private": true,
   "workspaces": [
-    "packages/@vue/*",
-    "packages/test/*",
-    "packages/vue-cli-version-marker"
+    "packages/flamecli"
   ],
   "scripts": {
     "lint": "eslint --fix packages/**/*.js packages/**/bin/*",
